# pasto-legal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  dockerfile  example_main.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: develop.yml  prod.yml
app/: fastapi_server.py  playground_server.py  streamlit_webapp.py
app/agents/: analyst.py  assistant.py  collector.py  main_agent.py
app/hooks/: tool_hooks.py  validation_hooks.py
app/interfaces/: streamlit.py  streamlit_webapp.py  whatsapp_webhook.py
app/tools/: easter_eggs_tools.py  gee_tools.py  info_tools.py
app/utils/hooks/: validation_hooks.py
app/utils/whatsapp/: __init__.py  router.py  security.py  whatsapp.py
docker/develop/: Dockerfile
docker/prod/: Dockerfile
tmp/: memory.db
utils/: memory.py
utils/whatsapp/: __init__.py  app.py  async_router.py  router.py  security.py  sync_router.py  whatsapp.py
