[project]
name = "pasto-legal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==2.3.13",
    "bs4>=0.0.2",
    "duckdb==1.3.0",
    "earthengine-api==1.7.4",
    "fastapi==0.115.8",
    "fastembed>=0.7.4",
    "google-genai==1.55.0",
    "httpx==0.28.1",
    "jinja2>=3.1.6",
    "lancedb>=0.26.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pylance>=1.0.0",
    "pymongo[srv]>=4.15.5",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "rich==14.0.0",
    "sqlalchemy==2.0.41",
    "streamlit>=1.52.2",
    "tantivy>=0.25.1",
    "uvicorn~=0.34.0",
]
